unpackaged/main/default/objects/Dependent_Attribute__c/Dependent_Attribute__c.object-meta.xml
<CustomObject>
    <description>To link the dependent attribute for the calculated type core attribute</description>
    <label>Dependent Attribute</label>
    <nameField>
        <displayFormat>DA-{0000000}</displayFormat>
        <label>Dependent Attribute Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependent Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>