unpackaged/main/default/objects/Dependent_Attribute__c/fields/Core_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Core_Attribute__c</fullName>
    <label>Core Attribute</label>
    <referenceTo>Core_Attribute__c</referenceTo>
    <relationshipLabel>Dependent Attributes</relationshipLabel>
    <relationshipName>Dependent_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>