unpackaged/main/default/objects/Dependent_Attribute__c/fields/Dependent_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Attribute</label>
    <referenceTo>Core_Attribute__c</referenceTo>
    <relationshipLabel>Dependent Attributes (Dependent Attribute)</relationshipLabel>
    <relationshipName>Dependent_Attributes1</relationshipName>
    <type>Lookup</type>
</CustomField>