unpackaged/main/default/objects/Dependent_Attribute__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Dependent Attributes</relationshipLabel>
    <relationshipName>Dependent_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>